ant-media-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ant-media-server
spec:
  selector:
    matchLabels:
      app: ant-media
  replicas: 1
  template:
    metadata:
      labels:
        app: ant-media
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ant-media
            topologyKey: "kubernetes.io/hostname"
      hostNetwork: true
      containers:
      - name: ant-media-server
        imagePullPolicy: Always
        image: 8jc42hbk.gra7.container-registry.ovh.net/library/ant-media-server-enterprise-k8s:test
        args: ["-g", "true", "-s", "true", "-r", "true", "-m", "cluster", "-h", "10.2.2.2"]
        resources:
          requests:
             cpu: 1000m
      imagePullSecrets:
      - name: regcred
