service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ant-media-server
spec:
  selector:
    app: ant-media-server
  ports:
    - name: http
      protocol: TCP
      port: 5080
