ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ant-media-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: r9wcme.nodes.c1.waw1.k8s.ovh.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ant-media-server
            port:
              number: 5080

  tls:
  - secretName: antmedia-cert
    hosts:
      - r9wcme.nodes.c1.waw1.k8s.ovh.net
